<resources>
    <string name="app_name">Parcial 1</string>

    // String de pantalla portada
    <string name="nombreu">Universidad Gerardo Barrios</string>
    <string name="nombreint">Integrantes</string>
    <string name="nombreuno">KATTERIN YEFERIN CAMPOS RODRÍGUEZ  </string>
    <string name="nombredos">MIGUEL ALONSO PORTILLO QUINTEROS   </string>
    <string name="nombretres">FRANKLIN STANLEY LARIN SARAVIA    </string>
    <string name="nombrecuatro">JOSÉ ALEXANDER SALINAS LOBOS    </string>
    <string name="nombrecinco">ERICK MAURICIO TIZNADO RODRIGUEZ </string>
    <string name="nombreseis">NATHALY MILENA ZELAYA CABALLERO   </string>
    <string name="btnpaginasig">Siguiente </string>

    <string name="titulo">CONTROLES BASICOS</string>
    <string name="nombre">Escriba su nombre</string>
    <string name="apellido">Escriba su apellido</string>
    <string name="enviarDatos">Enviar Datos</string>

    <string name="titulo1">DETERMINAR SI ES MAYOR DE EDAD</string>
    <string name="nombre1">Escriba su nombre</string>
    <string name="edad">Escriba su edad</string>
    <string name="enviarDatos1">ENVIAR DATOS</string>
    <string name="volver">PANTALLA ANTERIOR</string>
    //String de tab
    <string name="tabinicio">Inicio</string>
    <string name="tabingresardatos">Datos</string>
    <string name="tabfragments">Fragmentos </string>
    <string name="tabsensorapro">Sensores</string>
    <string name="tabmult">Multimedia</string>
    <string name="tabacer">Acerca de </string>

    //STRING PARA LOS TAB
    <string name="tabdesayuno">Desayuno Saludable</string>
    <string name="tabAlmuerzo">Almuerzo Saludable</string>
    <string name="tabCena">Cena Saludable</string>
    <string name="tabHome">Inicio</string>

    //STRING TAB FRAGMENTO DESAYUNO
    <string name="INTRO">Tu desayuno saludable</string>

    <string name="TITULO1">Omelete</string>
    <string name="TITULO2">Sandwich de atun</string>
    <string name="TITULO3">Jugos naturales</string>
    <string name="TITULO4">Avena</string>

    //STRING TAB FRAGMENTO ALMUERZO

    <string name="INTROF">Tu almuerzo saludable</string>

    <string name="TITULO1F">Pechuga asada con verduras</string>
    <string name="TITULO2F">Quesadillas vegetariana</string>
    <string name="TITULO3F">Pasta con pollo</string>
    <string name="TITULO4F">Filete de pescado con ensalada</string>

    //STRING TAB FRAGMENTO CENA
    <string name="INTROFS">Tu Cena Saludable</string>

    <string name="TITULO1FS">Aguacate Relleno Con Pescado</string>
    <string name="TITULO2FS">Ensalada Campera</string>
    <string name="TITULO3FS">Ensalada De Fruta</string>
    <string name="TITULO4FS">Ensalada De Arroz Con Lentejas</string>

    //STRING TAB FRAGMENTO INICIO
    <string name="TITULOINICIOS"> BIENVENIDO A TUS ALIMENTOS SALUDABLES </string>

    <string name="MENSAJEINICIO"> Hemos preparado para ti distintas opciones de comidas saludable,
        para conocerlas ingresa a las opciones de la parte inferior de la pantalla. </string>
<string name="MENUPRINCIPAL"> Regresar al Menu principal</string>
    <string name="todo">TODO</string>
    //STRING PARA LOS TAB
    <string name="tabSensorProxi">Sensor de proximidad</string>
    <string name="tabSensorAcelerometro">Sensor de acelerometro</string>
    <string name="tabHomeSensor">Inicio</string>

    //STRING TAB FRAGMENTO SENSOR DE PROXIMIDAD
    <string name="sensorp">SENSOR DE PROXIMIDAD</string>

    //STRING TAB FRAGMENTO SENSOR DE ACELEROMETRO
    <string name="sensora">SENSOR DE ACELEROMETRO</string>

    //STRING TAB FRAGMENTO INICIO
    <string name="TITULOINICIOSensor"> BIENVENIDO AL USO DE SENSORES ANDROID </string>

    <string name="MENSAJEINICIOSENSOR"> Hemos preparado dos opciones de sensores para ti,
        para conocerlos ingresa a las opciones de la parte inferior de la pantalla. </string>
    <string name="iniciar">INICIAR</string>
    <string name="parar">DETENER</string>

    //STRING DE LOS TAB
    <string name="Home">INICIO</string>
    <string name="Audio">REPRODUCTOR DE AUDIO</string>
    <string name="Video">REPRODUCTOR DE VIDEO</string>

    //string para reproductor de video
    <string name="Titulodevideo">REPRODUCTOR DE VIDEO</string>
   <string name="bienvenido">Bienvenido</string>
    <string name="Casa">Este proyecto es un a recopilacion de los proyectos anteriores todos y cada uno de estos hechos de manera funcional y con algunas modificaciones y adaptaciones para el proyecto actual</string>
</resources>