<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:orientation="vertical"
    tools:context=".MenuPrincipal">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:background="@color/purple_200"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabinicio" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabingresardatos" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabfragments" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabsensorapro" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabmult" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabacer" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="317dp"
            android:layout_height="173dp"
            android:text="@string/Casa"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.606"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.341" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="224dp"
            android:layout_height="48dp"
            android:text="@string/bienvenido"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.304"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.189" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>