<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCA4A4"
    android:backgroundTint="#375DEA"
    android:orientation="vertical"
    tools:context=".Sensores">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#71D5D5"
        app:tabIndicatorAnimationMode="elastic">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:icon="@drawable/ic_hogar_1"
            android:text="@string/tabHomeSensor" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/SensorProxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_apro"
            android:text="@string/tabSensorProxi" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/SensorAcelerometro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_velocimetro"
            android:text="@string/tabSensorAcelerometro" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#18A3E3">

        <TextView
            android:id="@+id/tvSensor"
            android:layout_width="225dp"
            android:layout_height="104dp"
            android:text="@string/MENSAJEINICIO"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.448" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="402dp"
            android:layout_height="42dp"
            android:text="@string/TITULOINICIOSensor"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.303" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

